fix: some initial fixes for poor contrast of markdown code blocks in dark ui

--- a/pdl-live-react/src/view/Markdown.css
+++ b/pdl-live-react/src/view/Markdown.css
@@ -7,12 +7,20 @@
  * See <https://github.com/wooorm/starry-night> for more info. */
 .pdl-markdown {
   --color-prettylights-syntax-comment: #59636e;
-  --color-prettylights-syntax-constant: #0550ae;
+  --color-prettylights-syntax-constant: var(
+    --pf-t--global--color--brand--default
+  );
   --color-prettylights-syntax-constant-other-reference-link: #0a3069;
-  --color-prettylights-syntax-entity: #6639ba;
+  --color-prettylights-syntax-entity: var(
+    --pf-t--global--text--color--status--info--default
+  );
   --color-prettylights-syntax-storage-modifier-import: #1f2328;
-  --color-prettylights-syntax-entity-tag: #0550ae;
-  --color-prettylights-syntax-keyword: #cf222e;
+  --color-prettylights-syntax-entity-tag: var(
+    --pf-t--global--color--brand--default
+  );
+  --color-prettylights-syntax-keyword: var(
+    --pf-t--global--text--color--status--danger--default
+  );
   --color-prettylights-syntax-string: #0a3069;
   --color-prettylights-syntax-variable: #953800;
   --color-prettylights-syntax-brackethighlighter-unmatched: #82071e;
@@ -20,10 +28,14 @@
   --color-prettylights-syntax-invalid-illegal-text: #f6f8fa;
   --color-prettylights-syntax-invalid-illegal-bg: #82071e;
   --color-prettylights-syntax-carriage-return-text: #f6f8fa;
-  --color-prettylights-syntax-carriage-return-bg: #cf222e;
+  --color-prettylights-syntax-carriage-return-bg: var(
+    --pf-t--global--text--color--status--danger--default
+  );
   --color-prettylights-syntax-string-regexp: #116329;
   --color-prettylights-syntax-markup-list: #3b2300;
-  --color-prettylights-syntax-markup-heading: #0550ae;
+  --color-prettylights-syntax-markup-heading: var(
+    --pf-t--global--color--brand--default
+  );
   --color-prettylights-syntax-markup-italic: #1f2328;
   --color-prettylights-syntax-markup-bold: #1f2328;
   --color-prettylights-syntax-markup-deleted-text: #82071e;
@@ -33,7 +45,9 @@
   --color-prettylights-syntax-markup-changed-text: #953800;
   --color-prettylights-syntax-markup-changed-bg: #ffd8b5;
   --color-prettylights-syntax-markup-ignored-text: #d1d9e0;
-  --color-prettylights-syntax-markup-ignored-bg: #0550ae;
+  --color-prettylights-syntax-markup-ignored-bg: var(
+    --pf-t--global--color--brand--default
+  );
   --color-prettylights-syntax-meta-diff-range: #8250df;
   --color-prettylights-syntax-sublimelinter-gutter-mark: #818b98;
 }
