--- a/pdl-live-react/src/view/masonry/Masonry.css
+++ b/pdl-live-react/src/view/masonry/Masonry.css
@@ -98,7 +98,7 @@
 
 .pf-v6-theme-dark {
   .pdl-masonry-tile-panel {
-    background: rgba(41, 41, 41, 0.5);
+    background: rgba(41, 41, 41);
   }
 }
 .pdl-masonry-tile-panel {
